--- a/cfgs/dcgan.yaml
+++ b/cfgs/dcgan.yaml
@@ -17,6 +17,7 @@ train:
     lr: 0.0002
     betas: [0.5,0.999]
   epochs: 10
+  dis_iter: 1 # number of iterations optimizing discriminator (min=1)
   workers: 2
   device: 'cuda:0'
   ngpu: 1 # number of gpus to use
