--- a/cfgs/wgan_gp.yaml
+++ b/cfgs/wgan_gp.yaml
@@ -12,6 +12,7 @@ network:
 
 train:
   dataset_path: './celeb' # relative path from datasets directory to root of dataset
+  tensorboard_path: './TensorBoard/wgan_gp/'
   batch_size: 64
   optimizer:
     lr: 0.0002
